--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "braingames",
   "version": "1.0.0",
   "description": "hexlet project",
-  "main": "index.js",
+  "main": "",
   "bin": {
     "brain-games": "dist/bin/brain-games.js",
     "brain-even": "dist/bin/brain-even.js",
